--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="https://kit.fontawesome.com/9ece6fd7f3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>CARAVAN</title>
+    <title>kadai1</title>
   </head>
 
   <body>
